--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,93 @@
-/* Add all your styles here */
+body {
+
+  background-color: 	#F0F8FF;}
+
+h1{
+
+  align: right;
+
+border: 3px solid blue;
+
+color: white;
+
+background-color: purple;
+
+}
+
+div h2{
+
+color: black;
+
+border: 3px solid blue;
+
+background-color: violet;
+
+}
+
+h2{
+
+  
+
+  color: white;
+
+  background-color: green;
+
+}
+
+audio{
+
+  
+
+  align: right;
+
+  border: 3px solid yellow;
+
+  background-color: purple;
+
+}
+
+div p{
+
+  
+
+  border: 2px solid powderblue;
+
+   font-size: 30%;
+
+  background-color: black;
+
+  color: white;
+
+  align: right;
+
+}
+
+a {
+
+  
+
+color: blue;
+
+font: 0%;
+
+border: 1px solid yellow;
+
+  
+
+}
+
+video{
+
+  
+
+  border: 2px solid red;
+
+  align: center;
+
+  width: 100%;
+
+  height: 10%;
+
+  
+
+}
