--- a/css/quiz.css
+++ b/css/quiz.css
@@ -26,7 +26,7 @@ background-color: white;
 h3{
 text-align: center;
 color: black;
-background-color: #3B3C36;
+background-color: #BFAFB2;
 color: white;
 border: 2px solid yellow;
 
