--- a/css/quiz.css
+++ b/css/quiz.css
@@ -8,7 +8,7 @@ margin-right: 2rem;
 
 }
 
-#button { background-color: blue; 
+#button { background-color: red; 
 color: white; 
 font-size: 18px; 
 padding: 5px;
