--- a/css/drw.css
+++ b/css/drw.css
@@ -12,7 +12,7 @@ background-color: yellow;
 
 body {
 
-  background-color: 	black;
+  background-color:#7CB9E8;
   margin-right: 2rem;
   margin-left: 2rem;
 }
@@ -32,7 +32,7 @@ p {
   background-color:red;
   color: white;
   border: 4px solid white;
-  margin-left: 12rem
+  margin-left: 11rem;
   
   
 }
