--- a/css/drw.css
+++ b/css/drw.css
@@ -5,6 +5,8 @@ border: 2px solid blue;
 padding-top: 15px;
 padding:  9px;
 background-color: yellow;
+border-radius: 4px;
+img: center;
 
 
   
@@ -20,7 +22,7 @@ body {
 
 h2 { color: black;
 background-color:#8F9779 ;
-font-size: 150%;
+font-size: 200%;
 text-align: center; 
 border: 2px solid green;
   
@@ -28,11 +30,11 @@ border: 2px solid green;
 
 p {
   text-align: right;
-  font-size: 70%;
+  font-size: 100%;
   background-color:red;
   color: white;
   border: 4px solid white;
-  margin-left: 11rem;
+  margin-left: 20rem;
   
   
 }
