--- a/css/Drr.css
+++ b/css/Drr.css
@@ -20,19 +20,20 @@ body {
 
 h2 { color: black;
 background-color: white;
-font-size: 150%;
+font-size: 250%;
 text-align: center; 
-border: 2px solid green;
+border: 2px solid yellow;
   
 }
 
 p {
   text-align: right;
-  font-size: 70%;
+  font-size: 100%;
   background-color:red;
   color: white;
   border: 4px solid white;
-  margin-left: 12rem
-  
-  
+  margin-left: 35rem;
+ 
+
+
 }
